# MetaTrace

./: .gitignore  README.md  add_license.js  build.js  build.sh  build_release.js  package.json  sfinae.cpp  user_test.cpp
backend/: package-lock.json  package.json  setIcon.js
backend/plugin/: CMakeLists.txt  README.md  Visualizer.cpp  VisualizerPlugin.cpp  build.bat  build_temp.bat  version.h
backend/src/: clangd_downloader.ts  lsp.ts  server.ts  version.ts
backend/tests/: plugin.test.ts
backend/tests/headers/: noise_filter.test.ts
backend/tests/templates/: classes.test.ts  concepts.test.ts  functions.test.ts  sfinae.test.ts  variadic.test.ts
backend/tests/utils/: runVisualizer.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  lspClient.ts  main.ts  store.ts  style.css
frontend/src/components/: DebuggerControls.vue  DesugaredCodePanel.vue  Editor.vue  EditorPanel.vue  ExplanationPanel.vue  FlamegraphNode.vue  FlamegraphPanel.vue  Graph.vue  GraphPanel.vue  OutputPanel.vue  ScrubberPanel.vue  StackPanel.vue  StepControls.vue  TypeResolutionPanel.vue  VariablesPanel.vue
scripts/: generate_version.js
